--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "repository": "git@github.com:martinnester/chess.git",
   "license": "MIT",
   "scripts": {
-    "start": "yarn tsc && node ./build/tsc.js"
+    "start": "yarn tsc && node ./build/main.js"
   },
   "devDependencies": {
     "typescript": "^4.8.2"
+  },
+  "dependencies": {
+    "@types/node": "^18.7.14",
+    "chalk": "4.1.2"
   }
 }
