--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
     "compilerOptions": {
-      "module": "system",
+      "module": "CommonJS",
       "noImplicitAny": true,
       "removeComments": true,
-      "preserveConstEnums": true,
-      "outFile": "build/tsc.js",
+      "preserveConstEnums": true, 
+      "outDir": "./build",
       "sourceMap": true
     },
     "include": ["src/**/*"],
