--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "scripts": {
     "start": "yarn tsc && node ./build/main.js"
   },
+  "type": "module",
   "devDependencies": {
     "typescript": "^4.8.2"
   },
   "dependencies": {
     "@types/node": "^18.7.14",
-    "chalk": "4.1.2"
+    "chalk": "^5.0.1"
   }
 }
